testes para o controller de restaurante
co-authored-by: Elias Ribeiro <eliasctrl@live.com>